# GeometryProcessing

Lab1_2/01-icp-base/: Application.cpp  Application.h  CMakeCache.txt  CMakeLists.txt  Camera.h  IterativeClosestPoint.cpp  IterativeClosestPoint.h  Makefile  NearestNeighbors.cpp  NearestNeighbors.h  NormalEstimator.cpp  NormalEstimator.h  PointCloud.cpp  PointCloud.h  Scene.cpp  Scene.h  SegmentCloud.cpp  SegmentCloud.h  cmake_install.cmake  imgui.ini  main.cpp  myRunInstractions  script.sh
Lab1_2/scans/armadillo/: scan0.ply  scan1.ply  scan10.ply  scan11.ply  scan12.ply  scan13.ply  scan14.ply  scan15.ply  (+8 more)
Lab3/02-reconstruction-base/: CMakeLists.txt  DualMarchingCubes.cpp  DualMarchingCubes.h  ImplicitFunction.h  NearestNeighbors.cpp  PointCloud.cpp  PointCloud.h  RBFFunction.cpp  RBFFunction.h  Scene.cpp  Scene.h  SimpleDistance.cpp  SimpleDistance.h  SphereFunction.cpp  SphereFunction.h  TriangleMesh.cpp  TriangleMesh.h  imgui.ini
Lab3/points/: maxplank.ply  moai.ply  sphere4.ply  sphere5.ply
Lab4/: Lab4Notes
Lab4/03-curvatures-base/: Application.cpp  CMakeLists.txt  Camera.cpp  MongePatch.cpp  MongePatch.h  NearestNeighbors.h  Scene.cpp  Scene.h  ShaderProgram.cpp  TriangleMesh.cpp  TriangleMesh.h  imgui.ini  script.sh
Lab4/meshes/: bunny.ply  horse.ply  maxplank.ply  moai.ply  sphere.ply
Lab5/04-smoothing-base/: Application.h  CMakeLists.txt  LaplacianSmoothing.cpp  LaplacianSmoothing.h  NearestNeighbors.cpp  Scene.cpp  Scene.h  ShaderProgram.h  TriangleMesh.cpp  TriangleMesh.h  imgui.ini  main.cpp  script.sh  timing.h
Lab5/corrupted/: bunny.ply  horse.ply  maxplank.ply  moai.ply  sphere.ply
Lab6/06-parameterization-base/: CMakeLists.txt  Parameterizer.cpp  Parameterizer.h  Scene.cpp  Scene.h  TriangleMesh.cpp  TriangleMesh.h  imgui.ini  script.sh  timing.cpp
Lab6/openMeshes/: maxplanckBored.ply  moaiBored.ply
tex/: LabReport_MicheleBonomi.aux  LabReport_MicheleBonomi.tex
(+41 files in other folders)
